--- a/demo2.yml
+++ b/demo2.yml
@@ -1,9 +1,9 @@
 ---
-name: my first yaml file
-hosts: all
-tasks:
-  - name: my first tasks
-    debug: 
-      msg: "Hello everyone"
+- name: my first yaml file
+  hosts: all
+  tasks:
+    - name: my first tasks
+      debug: 
+        msg: "Hello everyone"
 
 ...
