--- a/local_var.yml
+++ b/local_var.yml
@@ -3,6 +3,6 @@
   tasks: 
     vars: 
       URL: "www.google.com"
-   - name: 
+    name: 
        debug: 
-         msg: "{{URL}}"
+         msg: "{{URL}}" 
