--- a/local_var.yml
+++ b/local_var.yml
@@ -4,12 +4,9 @@
       - name: 
         debug: 
           msg: "{{URL}}" 
+          msg1: "{{URLt}}"
   vars: 
    URL: "www.google.com" 
    URLt: "one"
-  taskst: 
-      - name: 
-        debug: 
-          msg: "{{URLt}}"
-        
+
            
