--- a/local_var.yml
+++ b/local_var.yml
@@ -4,7 +4,7 @@
       - name: 
         debug: 
           msg: "{{URL}}" 
-          msg1: "{{URLt}}"
+          msgt: "{{URLt}}"
   vars: 
    URL: "www.google.com" 
    URLt: "one"
