--- a/local_var.yml
+++ b/local_var.yml
@@ -1,12 +1,9 @@
-- name: local playbook
+---
+- name: this is my local playbook
   hosts: all
-  tasks: 
-      - name: 
-        debug: 
-          msg: "{{URL,urlt}}" 
-           
-  vars: 
-   URL: "www.google.com" 
-   URLt: "one"
-
-           
+  tasks:
+    vars:
+      XYZ: "Global"
+- name: task 1
+  debug:
+    msg: "{{XYZ}}"
