--- a/gather_fact_multiple_values.yml
+++ b/gather_fact_multiple_values.yml
@@ -1,6 +1,7 @@
 ---
 - name: Getting multiple factors
   hosts: all
+  become: true
   tasks:
     - name: getting block size of node server
       debug:
