--- a/gather_fact_multiple_values.yml
+++ b/gather_fact_multiple_values.yml
@@ -5,5 +5,5 @@
   tasks:
     - name: getting block size of node server
       debug:
-        msg: "{{block_size}}"
+        msg: "{{ansible_architecture}}"
 ...
