commited the file

--- a/12.package_modul2.yml
+++ b/12.package_modul2.yml
@@ -6,7 +6,7 @@
   tasks:
     - name: 
       package:
-        - name: tree 
+        - name: apache2
           state: latest
           update_cache: yes 
       when: ansible_os_family == "Debian"
