commited the file

--- a/12.package_modul2.yml
+++ b/12.package_modul2.yml
@@ -1,6 +1,6 @@
 # Playbook for update server and install tree package.
 ---
-- name: package module example
+- name: 
   hosts: all
   become: true
   tasks:
