--- a/12.package_modul2.yml
+++ b/12.package_modul2.yml
@@ -3,7 +3,7 @@
   hosts: all
   become: true
   tasks:
-    - name: Updating node server and installing tree package at node server.
+    - name: Updating node server and installing tree package at node server ...
       package:
           state: latest
           update_cache: yes 
